--- a/index.html
+++ b/index.html
@@ -1,59 +1,222 @@
-<!DOCTYPE >
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Manipulating the DOM</title>
-  <!-- Load Google Fonts -->
-  <link href="https://fonts.googleapis.com/css?family=Fira+Sans:900|Merriweather&display=swap" rel="stylesheet">  <!-- Load Styles -->
-  <link href="css/styles.css" rel="stylesheet">
+  <link rel="stylesheet" href="css/styles.css">
+  <title>Landing Page</title>
 </head>
 <body>
-  <!-- HTML Follows BEM naming conventions 
-  IDs are only used for sections to connect menu achors to sections -->
-  <header class="page__header">
-    <nav class="navbar__menu">
-      <!-- Navigation starts as empty UL that will be populated with JS -->
-      <ul id="navbar__list"></ul>
+  <header class="page-header">
+    <nav class="navbar">
+      <a class="logo" href="#">AFR</a>
+      <ul id="navbar-list">
+        
+      </ul>
+      <div></div>
+      <div class="hamburger">
+        <span class="mobile-menu"></span>
+        <span class="mobile-menu"></span>
+        <span class="mobile-menu"></span>
+      </div>
     </nav>
   </header>
-  <main>
-    <header class="main__hero">
-      <h1>Landing Page </h1>
-    </header>
-    <!-- Each Section has an ID (used for the anchor) and 
-    a data attribute that will populate the li node.
-    Adding more sections will automatically populate nav.
-    The first section is set to active class by default -->
-    <section id="section1" data-nav="Section 1" class="your-active-class">
-      <div class="landing__container">
-        <h2>Section 1</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi fermentum metus faucibus lectus pharetra dapibus. Suspendisse potenti. Aenean aliquam elementum mi, ac euismod augue. Donec eget lacinia ex. Phasellus imperdiet porta orci eget mollis. Sed convallis sollicitudin mauris ac tincidunt. Donec bibendum, nulla eget bibendum consectetur, sem nisi aliquam leo, ut pulvinar quam nunc eu augue. Pellentesque maximus imperdiet elit a pharetra. Duis lectus mi, aliquam in mi quis, aliquam porttitor lacus. Morbi a tincidunt felis. Sed leo nunc, pharetra et elementum non, faucibus vitae elit. Integer nec libero venenatis libero ultricies molestie semper in tellus. Sed congue et odio sed euismod.</p>
 
-        <p>Aliquam a convallis justo. Vivamus venenatis, erat eget pulvinar gravida, ipsum lacus aliquet velit, vel luctus diam ipsum a diam. Cras eu tincidunt arcu, vitae rhoncus purus. Vestibulum fermentum consectetur porttitor. Suspendisse imperdiet porttitor tortor, eget elementum tortor mollis non.</p>
+  <main class="main">
+
+    <h1 class="mainHeading">Welcome to our Landing Page</h1>
+
+    <section id="Home" class="first-section" data-nav="section1">
+      <div class="first-section-img-container">
+        <img class="first-section-img" src="images/africa_holiday_blog_77.jpg" alt="holiday photo">
+      </div>
+      <div class="first-section-content">
+        <h4 class="first-section-small-heading">WE PROVIDE CLASSIC TOUR</h4>
+        <p class="first-section-content-up">We will show you the rich cultural heritage around Africa</p>
+        <p class="first-section-content-down">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi fermentum metus faucibus lectus pharetra dapibus. Suspendisse potenti. Aenean aliquam elementum mi, ac euismod augue. Donec eget lacinia ex. Phasellus imperdiet porta orci eget mollis. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi fermentum metus faucibus lectus pharetra dapibus. Suspendisse potenti. Aenean aliquam elementum mi, ac euismod augue. Donec eget lacinia ex. Phasellus imperdiet porta orci eget mollis.</p>
+      </div>
+
+    </section>
+
+      <article class="first-section-info">
+        <div class="best-quality first-content">
+          <svg class="svg-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path d="M244 84L255.1 96L267.1 84.02C300.6 51.37 347 36.51 392.6 44.1C461.5 55.58 512 115.2 512 185.1V190.9C512 232.4 494.8 272.1 464.4 300.4L283.7 469.1C276.2 476.1 266.3 480 256 480C245.7 480 235.8 476.1 228.3 469.1L47.59 300.4C17.23 272.1 0 232.4 0 190.9V185.1C0 115.2 50.52 55.58 119.4 44.1C164.1 36.51 211.4 51.37 244 84C243.1 84 244 84.01 244 84L244 84zM255.1 163.9L210.1 117.1C188.4 96.28 157.6 86.4 127.3 91.44C81.55 99.07 48 138.7 48 185.1V190.9C48 219.1 59.71 246.1 80.34 265.3L256 429.3L431.7 265.3C452.3 246.1 464 219.1 464 190.9V185.1C464 138.7 430.4 99.07 384.7 91.44C354.4 86.4 323.6 96.28 301.9 117.1L255.1 163.9z"/></svg>
+          <div class="best-quality-div">
+            <h5>Best Quality</h5>
+            <p class="first-text-content">Aliquam a convallis justo. Vivamus venenatis, erat eget pulvinar gravida, ipsum lacus aliquet velit</p>
+          </div>
+        </div>
+
+        <div class="rich-understanding first-content">
+          <svg class="svg-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><path d="M349.4 44.6c5.9-13.7 1.5-29.7-10.6-38.5s-28.6-8-39.9 1.8l-256 224c-10 8.8-13.6 22.9-8.9 35.3S50.7 288 64 288H175.5L98.6 467.4c-5.9 13.7-1.5 29.7 10.6 38.5s28.6 8 39.9-1.8l256-224c10-8.8 13.6-22.9 8.9-35.3s-16.6-20.7-30-20.7H272.5L349.4 44.6z"/></svg>
+          <div class="rich-understanding-div">
+            <h5>Rich Understanding</h5>
+            <p class="first-text-content">Aenean aliquam elementum mi, ac euismod augue. Donec eget lacinia ex. Phasellus imperdiet porta orci eget mollis.</p>
+          </div>
+        </div>
+
+        <div class="great-support first-content">
+          <svg class="svg-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path d="M256 80C149.9 80 62.4 159.4 49.6 262c9.4-3.8 19.6-6 30.4-6c26.5 0 48 21.5 48 48V432c0 26.5-21.5 48-48 48c-44.2 0-80-35.8-80-80V384 336 288C0 146.6 114.6 32 256 32s256 114.6 256 256v48 48 16c0 44.2-35.8 80-80 80c-26.5 0-48-21.5-48-48V304c0-26.5 21.5-48 48-48c10.8 0 21 2.1 30.4 6C449.6 159.4 362.1 80 256 80z"/></svg>
+          <div class="great-support-div">
+            <h5>Great Support</h5>
+            <p class="first-text-content">Vestibulum fermentum consectetur porttitor. Suspendisse imperdiet porttitor tortor.</p>
+          </div>
+        </div>
+      </article>
+
+    <section id="About" class="card-section" data-nav="section2">
+      <div class="card-content">
+        <h2 class="card-heading">Explore Our Exclusive Design Showcase</h2>
+        <p class="card-heading-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sit quis earum, obcaecati dolores ratione iusto atque quaerat sequi, ipsa repellat fugit nobis. Accusamus perferendis repellendus at aperiam, cumque beatae ex.</p>
+      </div>
+
+      <div class="card">
+        <div class="card-photo">
+          <img src="/images/africa_holiday_blog_5.jpg" alt="african jungle photo">
+        </div>
+        <div class="card-photo">
+          <img src="/images/africa_holiday_blog_11.jpg" alt="african jungle photo">
+        </div>
+        <div class="card-photo">
+          <img src="/images/africa_holiday_blog_10.jpg" alt="african jungle photo">
+        </div>
       </div>
     </section>
-    <section id="section2" data-nav="Section 2">
-      <div class="landing__container">
-        <h2>Section 2</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi fermentum metus faucibus lectus pharetra dapibus. Suspendisse potenti. Aenean aliquam elementum mi, ac euismod augue. Donec eget lacinia ex. Phasellus imperdiet porta orci eget mollis. Sed convallis sollicitudin mauris ac tincidunt. Donec bibendum, nulla eget bibendum consectetur, sem nisi aliquam leo, ut pulvinar quam nunc eu augue. Pellentesque maximus imperdiet elit a pharetra. Duis lectus mi, aliquam in mi quis, aliquam porttitor lacus. Morbi a tincidunt felis. Sed leo nunc, pharetra et elementum non, faucibus vitae elit. Integer nec libero venenatis libero ultricies molestie semper in tellus. Sed congue et odio sed euismod.</p>
 
-        <p>Aliquam a convallis justo. Vivamus venenatis, erat eget pulvinar gravida, ipsum lacus aliquet velit, vel luctus diam ipsum a diam. Cras eu tincidunt arcu, vitae rhoncus purus. Vestibulum fermentum consectetur porttitor. Suspendisse imperdiet porttitor tortor, eget elementum tortor mollis non.</p>
+    <section id="Contact" class="concept" data-nav="section3">
+      <h2 class="concept-heading">THIS IS HOW WE DO IT</h2>
+      <div class="concept-list">
+        <div class="concept-details">
+          <p class="list-number">01.</p>
+          <h3 class="concept-bold">Discuss the concept with us</h3>
+        </div>
+        <div class="concept-details">  
+          <p class="concept-context">Suspendisse potenti. Ami, ac euismod augue. Donec eget lacinia ex. Phasellus imperdiet porta orci eget mollis. Sed convallis sollicitudin mauris ac tincidunt. Donec bibendum</p>
+          <p class="concept-learn">LEARN MORE</p>
+        </div>
+      </div>
+      <div class="concept-list">
+        <div class="concept-details">
+          <p class="list-number">02.</p>
+          <h3 class="concept-bold">Confirm the provided design</h3>
+        </div>
+        <div class="concept-details">
+          <p class="concept-context">Aenean aliquam elementum augue. Donec eget lacinia ex. Phasellus imperdiet porta orci eget mollis. Sed convallis sollicitudin mauris ac tincidunt. Donec bibendum, nulla eget bibendum consectetur, sem nisi aliquam leo</p>
+          <p class="concept-learn">LEARN MORE</p>
+        </div>
+      </div>
+      <div class="concept-list">
+        <div class="concept-details">
+          <p class="list-number">03.</p>
+          <h3 class="concept-bold">We provide structured plan</h3>
+        </div>
+        <div class="concept-details">
+          <p class="concept-context">liquam a convallis justo. Vivamus venenatis, erat eget pulvinar gravida, ipsum lacus aliquet velit, vel luctus diam ipsum a diam. Cras eu tincidunt arcu, vitae rhoncus purus.</p>
+          <p class="concept-learn">LEARN MORE</p>
+        </div>
       </div>
     </section>
-    <section id="section3" data-nav="Section 3">
-      <div class="landing__container">
-        <h2>Section 3</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi fermentum metus faucibus lectus pharetra dapibus. Suspendisse potenti. Aenean aliquam elementum mi, ac euismod augue. Donec eget lacinia ex. Phasellus imperdiet porta orci eget mollis. Sed convallis sollicitudin mauris ac tincidunt. Donec bibendum, nulla eget bibendum consectetur, sem nisi aliquam leo, ut pulvinar quam nunc eu augue. Pellentesque maximus imperdiet elit a pharetra. Duis lectus mi, aliquam in mi quis, aliquam porttitor lacus. Morbi a tincidunt felis. Sed leo nunc, pharetra et elementum non, faucibus vitae elit. Integer nec libero venenatis libero ultricies molestie semper in tellus. Sed congue et odio sed euismod.</p>
 
-        <p>Aliquam a convallis justo. Vivamus venenatis, erat eget pulvinar gravida, ipsum lacus aliquet velit, vel luctus diam ipsum a diam. Cras eu tincidunt arcu, vitae rhoncus purus. Vestibulum fermentum consectetur porttitor. Suspendisse imperdiet porttitor tortor, eget elementum tortor mollis non.</p>
+    <section id="Blog" class="happy-time" data-nav="section4">
+      <div class="happy-time-div">
+        <img class="happy-time-img" src="/images/africa_holiday_blog_55.jpg" alt="beach photo">
+        <div class="happy-time-content">
+          <h2 class="happy-time-content-text">Spend your happy time with full comfort</h2>
+          <p class="happy-time-context">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi fermentum metus faucibus lectus pharetra dapibus. Suspendisse potenti. Aenean aliquam elementum mi, ac euismod augue. Donec eget lacinia ex.</p>
+          <p>EXPLORE OUR PROJECTS</p>
+          <svg class="svg-heart" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path d="M47.6 300.4L228.3 469.1c7.5 7 17.4 10.9 27.7 10.9s20.2-3.9 27.7-10.9L464.4 300.4c30.4-28.3 47.6-68 47.6-109.5v-5.8c0-69.9-50.5-129.5-119.4-141C347 36.5 300.6 51.4 268 84L256 96 244 84c-32.6-32.6-79-47.5-124.6-39.9C50.5 55.6 0 115.2 0 185.1v5.8c0 41.5 17.2 81.2 47.6 109.5z"/></svg>
+        </div>
+      </div>
+      <div class="happy-time-div">
+        <div class="happy-time-content-bottom">
+          <h2 class="happy-time-content-text"><q>Spend your happy time with full comfort, I absolutely love the holiday trip Morbi fermentum metus faucibus lectus pharetra dapibus. Suspendisse potenti. Aenean aliquam elementum mi, ac euismod augue. Donec eget lacinia ex.</q></h2>
+          <p class="happy-time-name">Jenny Wilson</p>
+          <p class="happy-time-state">St Celina, Delaware</p>
+        </div>
+        <img class="happy-time-img" src="/images/africa_holiday_blog_111.jpg" alt="beach photo">
       </div>
     </section>
+
+    <section id="Subscribe" class="subscribe-section" data-nav="section5">
+      <div class="subscribe">
+        <h2 class="subscribe-heading">Subscribe to our newsletter to get update</h2>
+        <p class="subscribe-text">Pellentesque maximus imperdiet elit a pharetra. Duis lectus mi, aliquam in mi quis, aliquam porttitor lacus. Morbi a tincidunt felis.</p>
+      </div>
+
+      <form class="form" method="post">
+        <div class="form-left">
+          <div class="form-div">
+            <label for="firstName">Your first name</label>
+            <input type="text" id="firstName" name="firstName" placeholder="Write your first name here" required>
+          </div>
+          <div class="form-div">
+            <label for="surname">Your Surname</label>
+            <input type="text" id="surname" name="surname" placeholder="Write your surname here" required>
+          </div>
+          <div class="form-div">
+            <label for="email">Email Address</label>
+            <input type="email" id="email" name="email" placeholder="Write your email address here" required>
+          </div>
+          <div class="form-div">
+            <label for="phone">Phone Number</label>
+            <input type="tel" id="phone" name="phone" placeholder="Write your phone number here">
+          </div>
+        </div>
+        <div class="form-right">
+          <div class="form-div">
+            <label for="subject">Subject</label>
+            <input type="text" id="subject" name="subject" placeholder="Write a subject line">
+          </div>
+          <div class="form-div">
+            <label for="message">Message</label>
+            <textarea name="message" id="message" cols="20" rows="5" wrap="hard" placeholder="Add a brief of your project here" required></textarea>
+          </div>
+          <input class="submit" type="submit" value="Subscribe">
+        </div>        
+      </form>
+      
+    </section>
+
   </main>
-  <footer class="page__footer">
-    <p>&copy Udacity</p>
-  </footer>
 
+  <footer class="footer">
+    <div class="footer-info">
+      <div id="latest-blog" class="footer-list">
+        <ul>
+            <p>Latest Blog</p>
+            <li>capital game reserve</li>
+            <li>World tourism</li>
+            <li>Visit African</li>
+            <li>Fancy holiday</li>
+            <li>Restuarants</li>
+        </ul>
+      </div>
+      <div id="trendy" class="footer-list">
+        <ul>
+            <p>Trendy</p>
+            <li>capital game reserve</li>
+            <li>World tourism</li>
+            <li>Visit African</li>
+            <li>Fancy holiday</li>
+            <li>Restuarants</li>
+        </ul>
+      </div>
+      <div id="most-visited" class="footer-list">    
+        <ul>
+            <p>Most Visited</p>
+            <li>capital game reserve</li>
+            <li>World tourism</li>
+            <li>Visit African</li>
+            <li>Fancy holiday</li>
+            <li>Restuarants</li>
+        </ul>
+      </div>
+    </div>
+    <div id="footer_copyright">
+        <p>&copy African Holiday, 2022. All Rights Reserved</p>
+    </div>
+  </footer>
+  <script src="/js/app.js"></script>
 </body>
 </html>
