index file  modified

--- a/index.html
+++ b/index.html
@@ -224,6 +224,6 @@
         <p>&copy African Holiday, 2022. All Rights Reserved</p>
     </div>
   </footer>
-  <script src="/js/app.js"></script>
+  <script src="js/app.js"></script>
 </body>
 </html>
